Add Docker repository

--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>10</java.version>
+        <java.version>8</java.version>
 
-        <docker.image.prefix>concourse-poc</docker.image.prefix>
+        <docker.image.prefix>aguseka</docker.image.prefix>
     </properties>
 
     <dependencies>
