--- a/ci/tasks/package.yml
+++ b/ci/tasks/package.yml
@@ -3,7 +3,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: concourse-poc
+    repository: aguseka/concourse-poc
     tag: "latest"
 
 inputs:
