--- a/ci/tasks/package.yml
+++ b/ci/tasks/package.yml
@@ -4,7 +4,7 @@ image_resource:
   type: docker-image
   source:
     repository: aguseka/concourse-poc
-    tag: "0.0.1-SNAPSHOT"
+    tag: "latest"
 
 inputs:
 - name: source-code
