--- a/ci/tasks/package.yml
+++ b/ci/tasks/package.yml
@@ -1,10 +1,10 @@
-platform: linux
-
-image_resource:
-  type: docker-image
-  source:
-    repository: aguseka/concourse-poc
-    tag: "0.0.1-SNAPSHOT"
+#platform: linux
+#
+#image_resource:
+#  type: docker-image
+#  source:
+#    repository: aguseka/concourse-poc
+#    tag: "0.0.1-SNAPSHOT"
 
 inputs:
 - name: source-code
