--- a/ci/tasks/package.yml
+++ b/ci/tasks/package.yml
@@ -3,11 +3,15 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: java
-    tag: "8"
+    repository: sonarqube
+    tag: latest
 
 inputs:
 - name: source-code
 
 run:
-  path: source-code/ci/tasks/package.sh
+  path: "source-code/mvnw"
+  args: ["-f", "source-code/pom.xml", "package", "sonar:sonar"]
+
+params:
+  MAVEN_BASEDIR: source-code
